--- a/core-html/games.html
+++ b/core-html/games.html
@@ -60,6 +60,12 @@
                   <p></p>
                </a>
 
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/back-rooms.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/backrooms.png" alt="" class="cards-image-2"/></div>
+                  <h3>Back Rooms</h3>
+                  <p></p>
+               </a>
+
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/basketball-stars.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/basketballstars.png" alt="" class="cards-image-2"/></div>
                   <h3>Basketball Stars</h3>
@@ -87,6 +93,12 @@
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/craftmine.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/craftmine.png" alt="" class="cards-image-2"/></div>
                   <h3>CraftMine</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/csgo-clicker.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/csgo clicker.png" alt="" class="cards-image-2"/></div>
+                  <h3>CSGO Clicker</h3>
                   <p></p>
                </a>
 
@@ -192,6 +204,12 @@
                   <p></p>
                </a>
 
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/game-inside.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/game-inside-a-game.png" alt="" class="cards-image-2"/></div>
+                  <h3>Game Inside a Game</h3>
+                  <p></p>
+               </a>
+
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/geo-dash.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/geodash.png" alt="" class="cards-image-2"/></div>
                   <h3>Geo Dash</h3>
@@ -222,6 +240,18 @@
                   <p></p>
                </a>
 
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/idle-shark.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/idle-shark.png" alt="" class="cards-image-2"/></div>
+                  <h3>Idle Shark</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/just-one-boss.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/just-one-boss.jpg" alt="" class="cards-image-2"/></div>
+                  <h3>Just One Boss</h3>
+                  <p></p>
+               </a>
+
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/madalin-stunt-cars2.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/MadalinStunt.png" alt="" class="cards-image-2"/></div>
                   <h3>Madalin Stunt Car 2</h3>
@@ -246,6 +276,30 @@
                   <p></p>
                </a>
 
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/papery-planes.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/paperly-planes.png" alt="" class="cards-image-2"/></div>
+                  <h3>Papery Planes</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/particle-clicker.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/particle-clicker.png" alt="" class="cards-image-2"/></div>
+                  <h3>Particle Clicker</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/polybranch.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <h3>Poly Branch</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/push-your-luck.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/push-your-luck-game.png" alt="" class="cards-image-2"/></div>
+                  <h3>Push Your Luck</h3>
+                  <p></p>
+               </a>
+
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/q1k3.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/q1k3.png" alt="" class="cards-image-2"/></div>
                   <h3>Q1k3</h3>
@@ -255,6 +309,12 @@
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/retro-bowl.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/Retro_Bowl_cover.png" alt="" class="cards-image-2"/></div>
                   <h3>Retro Bowl</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/rolly-vortex.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/rolly-vortex.jpg" alt="" class="cards-image-2"/></div>
+                  <h3>Rolly Vortex</h3>
                   <p></p>
                </a>
 
@@ -300,9 +360,45 @@
                   <p></p>
                </a>
 
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/sm64.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/sm64.jpg" alt="" class="cards-image-2"/></div>
+                  <h3>SM64</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/smash-karts.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/smash-karts.png" alt="" class="cards-image-2"/></div>
+                  <h3>Smash Karts</h3>
+                  <p></p>
+               </a>
+
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/snake-io.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/snake-io.jpeg" alt="" class="cards-image-2"/></div>
                   <h3>Snake io</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/snow-battle.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/snow-battle.png" alt="" class="cards-image-2"/></div>
+                  <h3>Snow Battle</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/soldier-legend.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/soldier-legend.png" alt="" class="cards-image-2"/></div>
+                  <h3>Soldier Legend</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/solitairie.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/solitarie.png" alt="" class="cards-image-2"/></div>
+                  <h3>Solitairie</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/sort-the-court.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/paperio.png" alt="" class="cards-image-2"/></div>
+                  <h3>Sort the Court</h3>
                   <p></p>
                </a>
 
@@ -321,6 +417,12 @@
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/stack.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/stack.png" alt="" class="cards-image-2"/></div>
                   <h3>Stack</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/super-hot.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/super-hot.jpg" alt="" class="cards-image-2"/></div>
+                  <h3>Super Hot</h3>
                   <p></p>
                </a>
 
@@ -354,9 +456,27 @@
                   <p></p>
                </a>
 
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/the-final-earth.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/final-earth.jpg" alt="" class="cards-image-2"/></div>
+                  <h3>The Final Earth</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/the-lost-ball.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/noImage.jpg" alt="" class="cards-image-2"/></div>
+                  <h3>The Lost Ball</h3>
+                  <p></p>
+               </a>
+
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/there-is-no-game.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/there-is-no-game.png" alt="" class="cards-image-2"/></div>
                   <h3>There is no game</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/time-shooter2.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/time-shooter-2.jpg" alt="" class="cards-image-2"/></div>
+                  <h3>Time Shooter 2</h3>
                   <p></p>
                </a>
 
@@ -378,6 +498,12 @@
                   <p></p>
                </a>
 
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/uno.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/uno.jpg" alt="" class="cards-image-2"/></div>
+                  <h3>Uno</h3>
+                  <p></p>
+               </a>
+
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/vex6.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/Vex6.png" alt="" class="cards-image-2"/></div>
                   <h3>Vex 6</h3>
@@ -387,6 +513,12 @@
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/wordle.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/wordle.jpg" alt="" class="cards-image-2"/></div>
                   <h3>Wordle</h3>
+                  <p></p>
+               </a>
+
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/you-are-bezos.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/cardImages/you-are-bezos.png" alt="" class="cards-image-2"/></div>
+                  <h3>You are Jeff Bezos</h3>
                   <p></p>
                </a>
 
