--- a/core-html/games.html
+++ b/core-html/games.html
@@ -222,6 +222,12 @@
                   <p></p>
                </a>
 
+               <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/grind-craft.html" class="div-block-3 w-inline-block">
+                  <div class="cards-image-mask"><img src="/games/grindcraft/img/splash.png" alt="" class="cards-image-2"/></div>
+                  <h3>GrindCraft</h3>
+                  <p></p>
+               </a>
+
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/hex-gl.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/hex.jpg" alt="" class="cards-image-2"/></div>
                   <h3>HexGL</h3>
