--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@ p2 {
 
 
       </style>
+      <script>
+         function start(name){
+            console.log("wow it worked " + name)
+         }
+      </script>
    </head>
 
    <div class="bg"></div>
