--- a/core-html/games.html
+++ b/core-html/games.html
@@ -117,7 +117,7 @@
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/drift-hunters.html" class="div-block-3 w-inline-block">
                   <div class="cards-image-mask"><img src="/cardImages/drift-hunters.png" alt="" class="cards-image-2"/></div>
                   <h3>Drift Hunters</h3>
-                  <p></p>
+                  <p>does not work on NHS chromebook</p>
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/duck-life.html" class="div-block-3 w-inline-block">
