--- a/core-html/games.html
+++ b/core-html/games.html
@@ -397,7 +397,7 @@
                </a>
 
                <a data-w-id="4d4a6372-54ce-56a1-e9ae-739c22395f7f" href="/game-indexes/sort-the-court.html" class="div-block-3 w-inline-block">
-                  <div class="cards-image-mask"><img src="/cardImages/paperio.png" alt="" class="cards-image-2"/></div>
+                  <div class="cards-image-mask"><img src="/cardImages/sort-the-court.jpg" alt="" class="cards-image-2"/></div>
                   <h3>Sort the Court</h3>
                   <p></p>
                </a>
